--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,15 @@ requires-python = ">=3.10"
 dependencies = [
     "asyncpg>=0.30.0",
     "fastapi>=0.119.1",
+    "langchain>=1.0.2",
+    "langchain-community>=0.4",
+    "langchain-core>=1.0.0",
+    "langchain-openai>=1.0.1",
     "openai-agents>=0.4.0",
     "pdf2image>=1.17.0",
     "pdfminer>=20191125",
     "pi-heif>=1.1.1",
+    "pymupdf>=1.26.5",
     "qdrant-client>=1.15.1",
     "sentence-transformers>=5.1.2",
     "sqlalchemy>=2.0.44",
